# aggr-server

./: .env  .gitignore  api.config.json  config.json  index.js  mise.toml  package-lock.json  package.json  test.config.json  test_upbit.config.json  upbit_1001_2000.json  upbit_1_1000.config.json  upbit_2001_3082.config.json  upbit_2001_3082.json
docker/: .env  docker-compose.yml
monitoring/: pyproject.toml
monitoring/aggr_influx_check/: __init__.py  cli.py
scripts/: monitor-influx.js
src/: config.js  exchange.js
src/exchanges/: binance_futures.js  bithumb.js  bitmart.js  bitunix.js  bybit.js  hyperliquid.js  kucoin.js  okex.js  upbit.js
src/services/: catalog.js  connections.js
src/storage/: influx.js
